# zona_protegida

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  README.rst  example.env  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
config/: asgi.py  settings.py  urls.py  wsgi.py
requirements/: base.txt  dev.txt
zona_protegida/: pyproject.toml
zona_protegida/config/: settings.py  urls.py
zp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
zp/accounts/: apps.py  urls.py  views.py
zp/customers/: admin.py  apps.py  forms.py  mixins.py  models.py  urls.py  views.py
zp/customers/migrations/: 0001_initial.py  0002_alter_customer_service_type.py  0002_customer_address_alter_customer_service_type.py  0002_person_deleted.py  0003_customer_address_alter_customer_service_type.py
zp/migrations/: 0001_initial.py
zp/services/: admin.py  apps.py  forms.py  models.py
zp/services/migrations/: 0001_initial.py  0002_alarm_mac_alarm_password_master_camera_ip_adress_and_more.py
zp/static/zp/css/: zp.css
zp/templates/: _base.html  _navmenu.html  base.html  brand.html  navmenu.html
zp/templates/registration/: login.html
zp/templates/zp/: index.html  service_list.html  zp_base.html  zp_home.html  zp_navmenu.html
zp/tests/: auth.py  test_index_views.py
zp/tests/customers/: test_person_model.py
zp/tests/zp/: test_index_views.py  test_list_services_view.py  test_service_list_view.py
zp/views/: __init__.py
zp/views/generic/: __init__.py  base.py  detail.py  edit.py  list.py
(+21 files in other folders)
